--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+actix-web = "2.0"
+actix-rt = "1.1.1"
+diesel = { version = "1.4.4", features = ["postgres"] }
+dotenv = "0.15.0"
