--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgres://sou.admin:minha.pass.preferida@localhost/concerts
+DATABASE_URL=postgres://sou.admin:minha.pass.preferida@localhost/concerts_test
