--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,9 @@ edition = "2018"
 [dependencies]
 actix-web = "2.0"
 actix-rt = "1.1.1"
-diesel = { version = "1.4.4", features = ["postgres"] }
+diesel = { version = "1.4.4", features = ["postgres","uuidv07", "r2d2", "chrono"] }
 dotenv = "0.15.0"
+futures = "0.3.5"
+r2d2 = "0.8.8"
+serde = { version = "1.0.111", features = ["derive"] }
+serde_json ="1.0.53"
