--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 actix-web = "2.0"
 actix-rt = "1.1.1"
 chrono = { version = "0.4.11", features = ["serde"] }
+derive_more = "*"
 diesel = { version = "1.4.4", features = ["postgres","uuidv07", "r2d2", "chrono"] }
 dotenv = "0.15.0"
 futures = "0.3.5"
