--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,6 @@ diesel = { version = "1.4.4", features = ["postgres","uuidv07", "r2d2", "chrono"
 dotenv = "0.15.0"
 futures = "0.3.5"
 r2d2 = "0.8.8"
+rand = "0.7.3"
 serde = { version = "1.0.111", features = ["derive"] }
 serde_json ="1.0.53"
