--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,5 +16,6 @@ dotenv = "0.15.0"
 futures = "0.3.5"
 r2d2 = "0.8.8"
 rand = "0.7.3"
+rust-crypto = "0.2.36"
 serde = { version = "1.0.111", features = ["derive"] }
-serde_json ="1.0.53"
+serde_json ="1.0.55"
